Lisatud JS event listener

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Kaalu teisendamine</h1>
     <form action="">
-        <input type="number" placeholder="Kaal kilogrammides?">
+        <input type="number" placeholder="Kaal kilogrammides?" id="kgInput" min="0">
     </form>
     <table>
        <tr>
