--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <table>
        <tr>
            <td>Grammid</td>
-           <td></td>
+           <td id="gramOutput"></td>
        </tr>
        <tr>
            <td>Naelad</td>
-           <td></td>
+           <td id="poundOutput"></td>
        </tr>
        <tr>
            <td>Untsid</td>
-           <td></td>
+           <td id="ounceOutput"></td>
        </tr>
     </table>
     <script src="main.js"></script>
